--- a/html/index.html
+++ b/html/index.html
@@ -28,16 +28,16 @@
                     <div class="select" id="sex" placeholder="Sex">
                         <input class="placeholder" id="Sex" readonly>
                         <ul>
-                            <li>Male</li>
-                            <li>Female</li>
+                            <li>男</li>
+                            <li>女</li>
                         </ul>
                     </div>
                     
                     <div class="select" id="status" placeholder="Status">
                             <input class="placeholder" id="Status" readonly>
                             <ul>
-                                <li>Student</li>
-                                <li>Teacher</li>
+                                <li>学生</li>
+                                <li>教师</li>
                             </ul>
                     </div>
 
@@ -86,11 +86,20 @@
         if(res == 1 || res == 4)
         {
             client.eCardNumber = x;
+            if(res==1)
+            {
+                window.location.href = '../html/bar.html';
+            }
+            else if(res==4)
+            {
+                window.location.href = '../html/barAdmi.html';
+            }
+
+
             if(login.isNew(x) == 1) {
-                window.location.href = '../html/student.html';
+                window.location.href = '../html/student.html';  
                 alert("新用户请完善信息！");
             }
-            else window.location.href = '../html/bar.html';
         }
     }
 
