--- a/html/teacher.html
+++ b/html/teacher.html
@@ -26,6 +26,11 @@
         </tr>
     </table>
     <div>
+        <form>
+            <select name="area" id="area">
+                <option value="0">--选择课程--</option>
+            </select>
+        </form>
         <p></p>
         <p>当前课程
             <input type="text" id="rname">
@@ -40,9 +45,25 @@
     </div>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript">
-        var vec = gradeinfo.querycourse("信号与系统", "王世杰", 0, 100);
+        var a = courseinfo.query("明凯");
+        alert(a.elementAt(0).getCourseName())
 
-        alert(vec.elementAt(0).getCourseName());
+        var id = new Array();
+        for (var h=0;h<a.size();h++)
+            id[h] = h;
+        var value = new Array();
+        for (var t=0;t<a.size();t++)
+            value[t] = a.elementAt(t).getCourseName();
+
+        var select = document.getElementById("area");
+        select.length = 1;
+        select.options[0].selected = true;
+        for(var x = 0;x<id.length;x++){
+            var option = document.createElement("option");
+            option.setAttribute("value",id[x]);
+            option.appendChild(document.createTextNode(value[x]));
+            select.appendChild(option);
+        }
 /*
         var vec = gradeinfo.querycourse("信号与系统", "王世杰", 0, 100);
 
@@ -84,7 +105,7 @@
 		function refresh() {
             var sum = delAll();
 
-            var coursename = $("#rname").val();
+            var coursename = $("#area").val();
             var low = parseInt($("#min").val());
             var top = parseInt($("#max").val());
             if (low>top)
