--- a/html/teacher1.html
+++ b/html/teacher1.html
@@ -4,13 +4,17 @@
 	<title>教师用户界面</title>
 </head>
 <body>
+    <p align="center">请选择课程
     <form style="text-align: center">
         <select name="area" id="area">
             <option value="0">--选择课程--</option>
         </select>
     </form>
+    </p>
+    <p align="center">课程平均分
+        <input type="text" id="average"></p>
     <div style="text-align: center">
-        <table id="myTable" border="solid">
+        <table id="myTable" border="solid" align="center">
             <tr>
                 <th style="width: 10%">学生ID</th>
                 <th style="width: 10%">学期</th>
@@ -27,9 +31,8 @@
             <input type="text" id="min" value="0"></p>
         <p>上限
             <input type="text" id="max" value="100"></p>
-        <button id="refresh" onclick="refresh()">刷新</button>
-        <p>课程平均分
-            <input type="text" id="average"></p>
+        <button id="refresh" onclick="refresh()">查看成绩</button>
+
     </div>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
