--- a/html/bookadmin.html
+++ b/html/bookadmin.html
@@ -184,7 +184,7 @@
             syalert.syopen("alert0");
 
         }
-
+        javascript:location.reload();
 
     });
     $("#deletebook").click(function () {
