删除对话 调整布局

--- a/html/index.html
+++ b/html/index.html
@@ -125,12 +125,19 @@
         if(res == 3) syalert.syopen("alert3");
         if(res == 1 || res == 4)
         {
-            client.eCardNumber = x;
-            if(login.isNew(x) == 1) {
-                window.location.href = '../html/student.html';
-              syalert.syopen("alert4");
-            }
-            else window.location.href = '../html/bar.html';
+        client.eCardNumber = x;
+        if(res==1)
+        {
+            window.location.href = '../html/bar.html';
+        }
+        else if(res==4)
+        {
+            window.location.href = '../html/barAdmi.html';
+        }
+        if(login.isNew(x) == 1) {
+            window.location.href = '../html/student.html';
+            alert("新用户请完善信息！");
+        }
         }
     }
 
